--- a/repos/TestApplication/TestApplication/TestApplication.vbproj
+++ b/repos/TestApplication/TestApplication/TestApplication.vbproj
@@ -140,6 +140,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Form\TestForm4.aspx" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -207,6 +208,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.vb">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form\TestForm4.aspx.designer.vb">
+      <DependentUpon>TestForm4.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form\TestForm4.aspx.vb">
+      <DependentUpon>TestForm4.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Global.asax.vb">
       <DependentUpon>Global.asax</DependentUpon>
