--- a/repos/SecondWebApplication/SecondWebApplication/SecondWebApplication.csproj
+++ b/repos/SecondWebApplication/SecondWebApplication/SecondWebApplication.csproj
@@ -106,6 +106,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="App_Data\DatabaseSample.mdf" />
+    <Content Include="App_Data\DatabaseSample_log.ldf">
+      <DependentUpon>DatabaseSample.mdf</DependentUpon>
+    </Content>
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -117,6 +121,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Form\CheckForm.aspx" />
+    <Content Include="Form\GirdViewSample.aspx" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -201,6 +206,13 @@
     <Compile Include="Form\CheckForm.aspx.designer.cs">
       <DependentUpon>CheckForm.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Form\GirdViewSample.aspx.cs">
+      <DependentUpon>GirdViewSample.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Form\GirdViewSample.aspx.designer.cs">
+      <DependentUpon>GirdViewSample.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -242,7 +254,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="SQL文\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
