--- a/repos/SecondWebApplication/SecondWebApplication/Web.config
+++ b/repos/SecondWebApplication/SecondWebApplication/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ASP.NET アプリケーションの構成方法の詳細については、
   https://go.microsoft.com/fwlink/?LinkId=169433 を参照してください
   -->
 <configuration>
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DatabaseSample.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
