--- a/repos/SecondWebApplication/SecondWebApplication/SecondWebApplication.csproj
+++ b/repos/SecondWebApplication/SecondWebApplication/SecondWebApplication.csproj
@@ -122,6 +122,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Form\CheckForm.aspx" />
     <Content Include="Form\GirdViewSample.aspx" />
+    <Content Include="Form\ListViewForm.aspx" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -212,6 +213,13 @@
     </Compile>
     <Compile Include="Form\GirdViewSample.aspx.designer.cs">
       <DependentUpon>GirdViewSample.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form\ListViewForm.aspx.cs">
+      <DependentUpon>ListViewForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Form\ListViewForm.aspx.designer.cs">
+      <DependentUpon>ListViewForm.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
