--- a/repos/MVP/MVP/Web.config
+++ b/repos/MVP/MVP/Web.config
@@ -15,6 +15,11 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
       </controls>
     </pages>
+  
+	<!--Cookieを使用しないセッションIDのための設定-->
+  <sessionState cookieless="true"
+				timeout="60"		
+  ></sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
